--- a/Poisson-Exp.ipynb
+++ b/Poisson-Exp.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdge_zips_data = pd.read_excel(\"SDGE Service Territory Zip Code List Q2-2021.xlsx\")"
+    "sdge_zips_data = pd.read_excel(\"data/SDGE Service Territory Zip Code List Q2-2021.xlsx\")"
    ]
   },
   {
